@@ -3,6 +3,8 @@
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22957).
   * Math library should be private for *.pc.in configuration files (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=22986).
+  * Do not split words for caption (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=17123).
 
 2013-03-18  6.8.3-10 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.3-10, SVN revision 11413.
